<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avt_dialog"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_100"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:scaleType="fitXY"
        android:src="@drawable/dog" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_learn"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_below="@+id/avt_dialog"
        android:layout_margin="50dp"
        android:elevation="@dimen/dp_2"
        app:cardBackgroundColor="#474747"
        app:cardCornerRadius="@dimen/dp_20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_learn"
                android:src="@drawable/ab2"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/icon_learn" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_find"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/avt_dialog"
        android:layout_margin="50dp"
        android:elevation="@dimen/dp_2"
        app:cardBackgroundColor="#474747"
        app:cardCornerRadius="@dimen/dp_20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_find"
                android:src="@drawable/picture"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon_find"
                android:layout_centerHorizontal="true"
                android:text="@string/find_the_picture"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_word"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/card_learn"
        android:layout_margin="50dp"
        android:elevation="@dimen/dp_2"
        app:cardBackgroundColor="#474747"
        app:cardCornerRadius="@dimen/dp_20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_word"
                android:src="@drawable/picture"
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/icon_word" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>