<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.base.main.ui.main.view.SplashActivity">

    <TextView
        android:id="@+id/text_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:text="Kid Learning"
        android:textColor="#D83B0A"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/text_app"
        android:id="@+id/bg_slider"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_20"
        tools:ignore="ExtraText"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="146dp">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/image_slider"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_300"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="2"
            app:sliderStartAutoCycle="true" />

    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_slider">

        <androidx.cardview.widget.CardView
            android:id="@+id/background_play"
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_100"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="@dimen/dp_30">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_play">

                <ImageView
                    android:id="@+id/img_app"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_20"
                    android:src="@drawable/ic_baseline_play_arrow_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_app"
                    android:layout_centerHorizontal="true"
                    android:text="@string/play_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/background_share"
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_100"
            android:layout_below="@+id/background_play"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_30">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_share">

                <ImageView
                    android:id="@+id/img_share"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_20"
                    android:src="@drawable/ic_baseline_share_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_share"
                    android:layout_centerHorizontal="true"
                    android:text="@string/share_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/background_rate"
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_100"
            android:layout_below="@+id/background_play"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_30">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_rate">

                <ImageView
                    android:id="@+id/img_rate"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_20"
                    android:src="@drawable/ic_baseline_star_rate_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_rate"
                    android:layout_centerHorizontal="true"
                    android:text="@string/rate_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>